# demo-ollama-langchain-local

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  Makefile.enhanced  PROJET_ARCHITECTURE.md  README.md  README_CORRECTIONS.md  README_OPTIMISATION.md  enhanced_embedder.py  enhanced_multimodal_rag.py  enhanced_multimodal_rag_demo.py  enhanced_vector_store.py  flowchart.md  image_analysis_demo_v1.ipynb  image_query_llava.py  multimodal_rag_demo.ipynb  multimodal_rag_demo.py  ollama_example_llama2.ipynb  ollama_example_qwen2.5.ipynb  pyproject.toml  requirements.txt  run_langchain_ollama.sh  test_combined_query.py  test_installation.py  test_uv_dependencies.py
api/: __init__.py  server.py
chatbot-interface-react/: package.json  tailwind.config.js
chatbot-interface-react/public/: index.html
chatbot-interface-react/src/: App.css
chatbot-interface-react/src/components/: ChatInterface.jsx  DocumentUpload.jsx  ImageUploadPreview.jsx  Modal.jsx  (+1 more)
config/: __init__.py  config.py
core/: __init__.py  config.py  embeddings.py  enhanced_embedder.py  enhanced_multimodal_rag.py  enhanced_vector_store.py  llm.py  multimodal_rag.py  rag.py  vector_operations.py
doc/: EnhancedEmbedder_doc.md  EnhancedMultimodalRAG_doc.md  EnhancedVectorStore_doc.md  MultimodalEmbedder_doc.md  MultimodalRAG_doc.md  MultimodalVectorStore_doc.md  RAG_Modules_Integration.md  resume_technico_fonctionnel.md  resume_technico_fonctionnel_enhanced.md
scripts/: __init__.py  compare_chunking.py  compare_performance.py  demo_chunking.py  ingest.py  remote_setup.sh  setup.sh
web/: index.html
(+5 files in other folders)
